<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/login_fragment">

    <fragment
        android:id="@+id/login_fragment"
        android:name="com.udacity.shoestore.ui.LoginFragment"
        android:label="@string/login_screen"
        tools:layout="@layout/login_fragment">
        <action
            android:id="@+id/action_login_fragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.ui.WelcomeFragment"
        android:label="@string/welcome"
        tools:layout="@layout/welcome_fragment" >
        <action
            android:id="@+id/action_welcomeFragment_to_instructionFragment"
            app:destination="@id/instructionFragment"
            app:enterAnim="@anim/shift_left_in"
            app:exitAnim="@anim/shift_left_out"
            app:popEnterAnim="@anim/shift_right_in"
            app:popExitAnim="@anim/shift_right_out" />
    </fragment>
    <fragment
        android:id="@+id/instructionFragment"
        android:name="com.udacity.shoestore.ui.InstructionFragment"
        android:label="@string/instruction"
        tools:layout="@layout/instruction_fragment" >
        <action
            android:id="@+id/action_instructionFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:popUpTo="@id/login_fragment"
            app:enterAnim="@anim/shift_left_in"
            app:exitAnim="@anim/shift_left_out"
            app:popEnterAnim="@anim/shift_right_in"
            app:popExitAnim="@anim/shift_right_out"/>
    </fragment>
    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.udacity.shoestore.ui.ShoeListFragment"
        android:label="@string/shoe_store"
        tools:layout="@layout/shoe_list_fragment" >
        <action
            android:id="@+id/action_shoeListFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/shift_left_in"
            app:exitAnim="@anim/shift_left_out"
            app:popEnterAnim="@anim/shift_right_in"
            app:popExitAnim="@anim/shift_right_out"/>
        <action
            android:id="@+id/action_shoeListFragment_to_login_fragment"
            app:destination="@id/login_fragment"
            app:enterAnim="@anim/shift_left_in"
            app:exitAnim="@anim/shift_left_out"
            app:popEnterAnim="@anim/shift_right_in"
            app:popExitAnim="@anim/shift_right_out"
            app:popUpTo="@id/login_fragment"
            app:popUpToInclusive="true" />
        <!--        <argument-->
<!--            android:name="shoe"-->
<!--            app:argType="com.udacity.shoestore.models.Shoe"-->
<!--            app:nullable="true"-->
<!--            android:defaultValue="@null" />-->
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.udacity.shoestore.ui.DetailFragment"
        android:label="@string/new_shoe"
        tools:layout="@layout/detail_fragment" >
<!--        <action-->
<!--            android:id="@+id/action_detailFragment_to_shoeListFragment"-->
<!--            app:destination="@id/shoeListFragment"-->
<!--            app:popUpTo="@id/shoeListFragment"-->
<!--            app:popUpToInclusive="true" />-->
    </fragment>
</navigation>